feat: [front] 멀티모듈 시큐리티 버그 수정